# advent-of-code-2025

./: .gitignore  pyproject.toml  utils.py
.devcontainer/: devcontainer.json  docker-compose.yml
day1/: day1.py  test_day1.py
day2/: day2.py  test_day2.py
day3/: day3.py  test_day3.py
day4/: day4.py  test_day4.py
day5/: day5.py  test_day5.py
day6/: day6.py  test_day6.py
day7/: day7.py  test_day7.py
day8/: day8.py  test_day8.py
day9/: day9.py  test_day9.py
