[tool.poetry]
name = "aoc-2025"
version = "0.1.0"
description = ""
authors = ["Matt McHugh <mchughmk@gmail.com>"]

packages = [
    { include = "day1" },
    { include = "day2" },
    { include = "day3" },
]

[tool.poetry.scripts]
day1 = "day1.day1:main"
day2 = "day2.day2:main"
day3 = "day3.day3:main"

[tool.poetry.dependencies]
python = ">=3.14,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"