[tool.poetry]
name = "aoc-2025"
version = "0.1.0"
description = ""
authors = ["Matt McHugh <mchughmk@gmail.com>"]

packages = [
    { include = "day1" },
    { include = "day2" },
    { include = "day3" },
    { include = "day4" },
    { include = "day5" },
    { include = "day6" },
    { include = "day7" },
]

[tool.poetry.scripts]
day1 = "day1.day1:main"
day2 = "day2.day2:main"
day3 = "day3.day3:main"
day4 = "day4.day4:main"
day5 = "day5.day5:main"
day6 = "day6.day6:main"
day7 = "day7.day7:main"

[tool.poetry.dependencies]
piso = ">=1.2,<2.0"
python = ">=3.14,<4.0.0"
numpy = ">=2.3.5,<3.0"
pandas = ">=2.3.3,<3.0"
treelib = ">=1.8.0,<2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"